// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductImage /> Debe mostrar el componente con la imagen pasada en las props 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;

exports[`<ProductImage /> Debe mostrar una imagen por defecto obtenida del componente <ProductCard/> 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
